# personal-ledger

./: .gitignore  .gitmodules  404.html  Cargo.toml  Makefile.toml  README.md  book.toml  index.html  mkdocs.yaml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md  rust.instructions.md  sql-sp-generation.instructions.md
.github/prompts/: rustdocs.md  tracing.md  unit-tests.md
.github/workflows/: build-deploy-documentation.yaml  mdbook.yaml  mkdocs.yaml
config/: personal-ledger.conf
contributing/: index.html
crates/backend/: Cargo.toml  Makefile.toml
crates/backend/src/: main.rs
crates/grpc/: Cargo.toml
crates/lib-rpc/: Cargo.toml  build.rs
crates/lib-rpc/proto/personal-ledger/v001/: categories.proto
crates/lib-rpc/src/: utilities.rs
crates/libs/lib-config/: Cargo.toml
crates/libs/lib-config/src/: backend.rs  ledger.rs  lib.rs
crates/libs/lib-database/: Cargo.toml
crates/libs/lib-database/.sqlx/: query-992da607e6a6947f973e33dbbb006004f2cd1204206c67959da896bd45c12bb2.json  query-d2c9d0124fa56d07a1b6020ebba4b1198d6f0810bc78953052c39a6d6b9edad3.json
crates/libs/lib-database/migrations/: 20241209000000_create_categories_table.sql
crates/libs/lib-database/src/: config.rs  connection.rs  error.rs  lib.rs  pool.rs
crates/libs/lib-database/src/categories/: builder.rs  delete.rs  find.rs  insert.rs  mod.rs  model.rs  update.rs
crates/libs/lib-domain/: Cargo.toml
crates/libs/lib-domain/src/: category_types.rs  hex_color.rs  row_id.rs  url_slug.rs
crates/libs/lib-rpc/: Cargo.toml  Makefile.toml  build.rs
crates/libs/lib-rpc/proto/personal-ledger/v001/: utilities.proto
crates/libs/lib-rpc/src/: error.rs  lib.rs
crates/libs/lib-rpc/src/categories/: activate.rs  mod.rs  proto.rs
crates/libs/lib-rpc/src/utilities/: mod.rs
crates/libs/lib-telemetry/: Cargo.toml
crates/libs/lib-telemetry/src/: config.rs  error.rs  init.rs  levels.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: README.md  SUMMARY.md  about.md  contributing.md  directories-files.md  getting_started.md  index.html  references.md  roadmap.md  similar_projects.md
docs/src/: SUMMARY.md  configuration.md  directories-files.md  telemetry.md
getting_started/: index.html
references/: index.html
roadmap/: index.html
similar_projects/: index.html
