[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
## -- Internal Dependencies --
lib_config = { path = "../../crates/libs/lib-config" }
lib_rpc = { path = "../../crates/libs/lib-rpc" }
lib_telemetry = { path = "../../crates/libs/lib-telemetry" }

## -- Workspace Dependencies -- 
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

## -- Library Dependencies --
clap = { version = "4.5.53", features = ["derive", "cargo"] }  #<-- Delete after working


[lints]
workspace = true
