[package]
name = "lib_config"
version = "0.1.0"
edition = "2024"

[dependencies]

## -- Internal Dependencies --
lib_telemetry = { path = "../../../crates/libs/lib-telemetry" }

## -- Workspace Dependencies --
serde = { workspace = true }
thiserror = { workspace = true }

## -- Library Dependencies --
config = { version = "0.15.19" }
dirs = { version = "6.0.0" }


[dev-dependencies]
tempfile = "3.10.1"

[lints]
workspace = true
