[package]
name = "lib_database"
version = "0.1.0"
edition = "2024"


[dependencies]
## -- Internal Dependencies --
lib_domain = { path = "../../../crates/libs/lib-domain" }

## -- Workspace Shared Dependencies --
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

## -- Library Dependencies --



[dev-dependencies]
## Use `fake` as a dev-dependency for tests and examples. We declare the
## version and features locally here instead of inheriting from the
## workspace to avoid manifest parsing issues when `fake` is only listed
## under `workspace.dev-dependencies` in the top-level manifest.
fake = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
