[package]
name = "lib_domain"
version = "0.1.0"
edition = "2024"


[dependencies]
## -- Internal Dependencies --
lib_rpc = { path = "../../../crates/libs/lib-rpc" }

## -- Workspace Shared Dependencies --
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

## -- Library Dependencies --
fake = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
