[package]
name = "lib_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
## -- Internal Dependencies --

## -- Workspace Shared Dependencies --
tonic = { workspace = true }

## -- Library Dependencies --
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
tonic-prost = { version = "0.14.2" }

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }