[package]
name = "lib_telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
## -- Internal Dependencies --

#-- Workspace Dependencies --
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

#-- Library Dependencies --
config = { version = "0.15.16"}
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }

[dev-dependencies]
serde_json = { workspace = true }
fake = { workspace = true }

[lints]
workspace = true
